--- a/Resources/Private/Templates/Backend/Index.html
+++ b/Resources/Private/Templates/Backend/Index.html
@@ -1,5 +1,3 @@
-{namespace mr=Scarbous\MrTinypng\ViewHelpers}
-
 <f:layout name="Default"/>
 
 <f:section name="content">
@@ -23,7 +21,7 @@
         </f:if>
         <li class="list-group-item list-group-item-success">
             <span class="glyphicon glyphicon-compressed" aria-hidden="true"></span>
-            You save: <b>{reduction -> mr:Format.Bytes()}</b>
+            You save: <b>{reduction -> f:Format.Bytes()}</b>
         </li>
         <li class="list-group-item list-group-item-info">
             <span class="glyphicon glyphicon-scale" aria-hidden="true"></span>
