--- a/Resources/Private/Templates/Backend/Index.html
+++ b/Resources/Private/Templates/Backend/Index.html
@@ -42,17 +42,14 @@
     </div>
 
     <script>
-        jQuery(document).ready(function () {
-            jQuery('[data-toggle="tooltip"]').tooltip();
-
+        TYPO3.jQuery(document).ready(function () {
             var progressbarCount = 0;
-            jQuery('#progressbar .progress-bar').each(function () {
-                progressbarCount += parseInt(jQuery(this).attr('aria-valuenow'));
+            TYPO3.jQuery('#progressbar .progress-bar').each(function () {
+                progressbarCount += parseInt(TYPO3.jQuery(this).attr('aria-valuenow'));
             });
-            console.log(progressbarCount);
-            jQuery('#progressbar .progress-bar').each(function () {
-                jQuery(this).css({
-                    'width': 100 / progressbarCount * parseInt(jQuery(this).attr('aria-valuenow')) + '%'
+            TYPO3.jQuery('#progressbar .progress-bar').each(function () {
+                TYPO3.jQuery(this).css({
+                    'width': 100 / progressbarCount * parseInt(TYPO3.jQuery(this).attr('aria-valuenow')) + '%'
                 });
             });
         });
