Move Image Processing to CommandController

--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -18,7 +18,9 @@
         <div id="typo3-docbody">
             <div id="typo3-inner-docbody">
                 <div class="container" style="max-width:500px">
-                    <f:flashMessages renderMode="div"/>
+
+                    <f:flashMessages />
+
                     <f:render section="content"/>
                 </div>
             </div>
